# omada-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: MCP.md
omada_cli/: __init__.py  cli.py  client.py  commands.py  config.py  diagnostics.py  encoding.py  mcp_server.py  output.py
tests/: conftest.py  test_cli.py  test_client.py  test_commands.py  test_config.py  test_diagnostics.py  test_encoding.py  test_extra.py  test_mcp.py
